--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ class: center, middle, inverse
     * Etats
     * Redux
     * Tests
+    * Router
     * Optimisations
 ---
 
@@ -1943,7 +1944,7 @@ export const totalSelector = createSelector(
 
 layout: false
 
-#TP-08
+#TP-09
 ## Optimisation
 Jouer avec la méthode shouldComponentUpdate
 1. Implémenter la méthode shouldComponentUpdate
