--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ oneOf['News', 'Photos'], oneOfType([...]), arrayOf(), objectOf()...
 ---
 
 #Composant et Cycle de vie
-Les incontournables
+Les incontournables:
 * **render()**
 * **componentWillMount()**
 * **componentDidMount()**
