--- a/index.html
+++ b/index.html
@@ -1628,7 +1628,7 @@ layout: false
 * C'était la partie la plus compliquée
 * On sait créer des composants et leur passer des propriétés
  * Depuis leur composant parent
- * Depuis depuis un l'état 'local' (**LocalState**)
+ * Depuis l'état 'local' (**LocalState**)
  * Depuis l'état du **store** (**State**)
  * Depuis un composant grand(n)-parent par le context... ou pas !
 
