--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@ layout: true
 
 * On peut passer des objets à ses composants enfants (n'importe où dans la hiérarchie).
 * Des librairies sont basées la dessus, mais ce n'est pas officiellement supporté (le fonctionnement pourra varier, être supprimé).
-La doc par d'**experimental API** !
+La doc parle d'**experimental API** !
 * *react-redux* fonctionne grâce à ca (le store est passé à tous les enfants).
 * ** A n'utiliser qu'en cas d'urgence ;)**
 
