--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
+    <style type="text/css">
+        .fragment.current-visible.visible:not(.current-fragment) {
+            display: none;
+            height: 0px;
+            line-height: 0px;
+            font-size: 0px;
+        }
+    </style>
 </head>
 <body>
 <div class="reveal">
@@ -99,7 +107,7 @@
                 </code>
             </pre>
             <pre class="javascript fragment fade-up">
-                <code  data-trim>
+                <code data-trim>
                 const user = {};
                 user.name = 'john'; // (1)
                 user = {name: 'lea'}; // (2)
@@ -110,6 +118,258 @@
                 const arr = ['a'];
                 arr.push('b'); // (3)
                 arr = ['a', 'b']; // (4)
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Arrow functions</h3>
+            <pre>
+                <code class="javascript" data-trim>
+                function addOldSchool(a, b) {
+                    return a + b;
+                }
+                </code>
+                <code class="javascript fragment" data-trim>
+                let add = (a, b) => {
+                    return a + b;
+                }
+                </code>
+                <code class="javascript fragment" data-trim>
+                add = (a, b) => a + b
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Arrow functions</h3>
+            <pre>
+                <code class="javascript" data-trim>
+                const squares = [0, 1, 2, 3, 4].map(x => x * x);
+                console.log(squares);
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Attention !</h3>
+            <p><a href="http://www.webbrowsercompatibility.com/es6/desktop/">Pas totalement supporté par les
+                navigateurs</a></p>
+            <ul>
+                <li>Shim (Array.map(), Array.reduce(), ...)</li>
+                <li>Transpiler (=>, let, const, ...)</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Spread operator</h3>
+            <pre class="fragment current-visible">
+                <code class="javascript" data-trim>
+                const odd = [1, 3, 5, 7, 9];
+                const even = [2, 4, 6, 8]
+                const all = [0];
+
+                // arr.push([element1[, ...[, elementN]]])
+                all.push(odd);
+                all.push(even);
+
+                console.log(all) // ?
+                </code>
+            </pre>
+            <pre class="fragment current-visible">
+                <code class="javascript" data-trim>
+                const odd = [1, 3, 5, 7, 9];
+                const even = [2, 4, 6, 8]
+                const all = [0];
+
+                // arr.push([element1[, ...[, elementN]]])
+                for (let i = 0; i < odd.length; i++) {
+                    all.push(odd[i]);
+                }
+                for (let i = 0; i < even.length; i++) {
+                    all.push(even[i]);
+                }
+                console.log(all) // ?
+                </code>
+            </pre>
+            <pre class="fragment current-visible">
+                <code class="javascript" data-trim>
+                    const odd = [1, 3, 5, 7, 9];
+                    const even = [2, 4, 6, 8]
+                    const all = [0];
+
+                    // arr.push([element1[, ...[, elementN]]])
+                    all.push(...odd);
+                    all.push(...even);
+
+                    console.log(all) // ?
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Destructuring</h3>
+            <pre>
+                <code class="javascript" data-trim>
+                    const foo = {a: 1, b: 2, c: 'bar'};
+                    let {a} = foo;
+                    console.log(a); // ?
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Destructuring</h3>
+            <pre>
+                <code class="javascript" data-trim>
+                const user = {
+                    firstname: 'john',
+                    nickname: 'ninja',
+                    lastname: 'doe',
+                    age: 21
+                };
+
+                function getUserName(user) {
+                    return user.firstname.concat(' ').concat(user.lastname);
+                }
+                console.log(getUserName(user));
+                </code>
+                <code class="javascript fragment" data-trim>
+                    function getUserName({firstname, lastname}) {
+                        return firstname.concat(' ').concat(lastname);
+                    }
+                </code>
+                <code class="javascript fragment" data-trim>
+                    const getUserName = ({firstname, lastname}) =>
+                    firstname.concat(' ').concat(lastname);
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Shorthand Notation</h3>
+            <pre>
+                <code class="javascript" data-trim data-noescape>
+                const foo = 42;
+                const bar = 1;
+
+                const longer = {
+                    foo: foo,
+                    bar: bar
+                    }
+                <span class="fragment">
+                const shorter = {
+                    foo,
+                    bar
+                }
+                </span>
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Bonus</h3>
+            <pre>
+                <code class="javascript" data-trim data-noescape>
+
+                Object.assign({}, {a: 1, c: 3}, {a: 10, b: 2}); // = ?
+
+                const m = new Map();
+                m.set('foo', 2);
+                const bar = m.has('foo') ? m.get('foo') : 0;
+
+                const uniq = new Set([1, 2, 3, 1, 2, 3]);
+                uniq.length // ?
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Rappels - currying</h3>
+            <pre>
+                <code class="javascript" data-trim data-noescape>
+                let add = function(x) {
+                    return function(y) {
+                        return x + y
+                    }
+                }
+                add(2)(3) // ???
+                <span class="fragment">
+                const add2 = add(2);
+                add2(3); // = ?
+                </span>
+                <span class="fragment">
+                let add = x => y => x + y // WTF ?!
+                </span>
+                <span class="fragment">
+                let add = x =>
+                    y => (x + y);
+                //easy !
+                </span>
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Rappels - this</h3>
+            <pre>
+                <code class="javascript" data-trim data-noescape>
+                function f() {
+                this.foo; // what is this ?
+                }
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h1>
+                <img width="200" height="200" data-src="images/react.svg" alt="react"
+                     style="border: none; background: none; box-shadow: none; margin: 0;">
+            </h1>
+        </section>
+        <section>
+            <h3>Tout est composant</h3>
+            <img data-src="images/components.png" alt="components" width="90%">
+        </section>
+        <section>
+            <h3>Hello world</h3>
+            <pre>
+index.js
+                <code class="jsx" data-trim>
+                import React from "react";
+                import ReactDOM from "react-dom";
+                import Hello from "./Hello";
+
+                ReactDOM.render(
+                    &lt;Hello name="cnrs"/&gt;,
+                    document.getElementById('root')
+                );
+                </code>
+hello.js
+                <code class="jsx" data-trim>
+                import React from "react";
+
+                class Hello extends React.Component {
+                    render() {
+                        return (
+                            <div>Hello {this.props.name} !</div>
+                        );
+                    }
+                }
+                export default Hello;
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>JSX</h3>
+            <pre>
+                <code class="jsx" data-trim>
+                render: function() {
+                    return (
+                      <li className="contact">
+                          <h2 className="contact-name">{this.props.name}</h2>
+                      </li>
+                    )
+                }
+                </code>
+                <code class="jsx" data-trim>
+                render: function() {
+                    return (
+                      React.createElement('li', {className: 'contact'},
+                        React.createElement('h2', {className: 'contact-name'},
+                                                            this.props.name)
+                      )
+                    )
+                }
                 </code>
             </pre>
         </section>
