--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1><img width="75" height="75" data-src="images/react.svg" alt="react"
                      style="border: none; background: none; box-shadow: none; margin: 0;">React</h1>
             <h3>#ES6</h3>
-            <p style="margin-top: 2em;"><a href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
+            <p style="margin-top: 2em;"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
             <p><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a></p>
         </section>
 
@@ -48,12 +48,10 @@
         </section>
         <section>
             <h3>Versions</h3>
-            <pre>
-                <code class="json" data-trim>
+            <pre><code data-trim>
                     "react": "15.6.1"
                     "create-react-app": "1.0.11"
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Contenu</h3>
@@ -82,13 +80,11 @@
         </section>
         <section>
             <h3><span style="text-decoration: line-through">var</span>, let, const</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                 let foo = 'bar';
                 const MAX = 10;
                 const ttc = addTva(15);
-                </code>
-            </pre>
+                </code></pre>
             <p class="fragment">
                 <span style="color: #8cd0d3">let</span> vs. <span style="color: #cc9393">const</span> ?
                 <span class="fragment">0 var, 44 let, 997 const</span>
@@ -96,61 +92,51 @@
         </section>
         <section>
             <h3><span style="text-decoration: line-through">var</span>, let, const</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                 if (true) {
                     var i = 1;
                 } else {
                     var j = 2;
                 }
                 console.log(i, j);
-                </code>
-            </pre>
-            <pre class="javascript fragment fade-up">
-                <code data-trim>
+                </code></pre>
+            <pre class="fragment fade-up"><code data-trim>
                 const user = {};
                 user.name = 'john'; // (1)
                 user = {name: 'lea'}; // (2)
-                </code>
-            </pre>
-            <pre class="fragment fade-up">
-                <code class="javascript" data-trim>
+                </code></pre>
+            <pre class="fragment fade-up"><code data-trim>
                 const arr = ['a'];
                 arr.push('b'); // (3)
                 arr = ['a', 'b']; // (4)
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Arrow functions</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                 function addOldSchool(a, b) {
                     return a + b;
                 }
-                </code>
-                <code class="javascript fragment" data-trim>
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 let add = (a, b) => {
                     return a + b;
                 }
-                </code>
-                <code class="javascript fragment" data-trim>
+                </code></pre>
+            <pre class="fragment"><code data-trim>
                 add = (a, b) => a + b
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Arrow functions</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                 const squares = [0, 1, 2, 3, 4].map(x => x * x);
                 console.log(squares);
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Attention !</h3>
-            <p><a href="http://www.webbrowsercompatibility.com/es6/desktop/">Pas totalement supporté par les
+            <p><a target="_blank" href="http://www.webbrowsercompatibility.com/es6/desktop/">Pas totalement supporté par les
                 navigateurs</a></p>
             <ul>
                 <li>Shim (Array.map(), Array.reduce(), ...)</li>
@@ -159,8 +145,7 @@
         </section>
         <section>
             <h3>Spread operator</h3>
-            <pre class="fragment current-visible">
-                <code class="javascript" data-trim>
+            <pre class="fragment current-visible"><code data-trim>
                 const odd = [1, 3, 5, 7, 9];
                 const even = [2, 4, 6, 8]
                 const all = [0];
@@ -170,10 +155,8 @@
                 all.push(even);
 
                 console.log(all) // ?
-                </code>
-            </pre>
-            <pre class="fragment current-visible">
-                <code class="javascript" data-trim>
+                </code></pre>
+            <pre class="fragment current-visible"><code data-trim>
                 const odd = [1, 3, 5, 7, 9];
                 const even = [2, 4, 6, 8]
                 const all = [0];
@@ -186,10 +169,8 @@
                     all.push(even[i]);
                 }
                 console.log(all) // ?
-                </code>
-            </pre>
-            <pre class="fragment current-visible">
-                <code class="javascript" data-trim>
+                </code></pre>
+            <pre class="fragment current-visible"><code data-trim>
                     const odd = [1, 3, 5, 7, 9];
                     const even = [2, 4, 6, 8]
                     const all = [0];
@@ -199,23 +180,19 @@
                     all.push(...even);
 
                     console.log(all) // ?
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Destructuring</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                     const foo = {a: 1, b: 2, c: 'bar'};
                     let {a} = foo;
                     console.log(a); // ?
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Destructuring</h3>
-            <pre>
-                <code class="javascript" data-trim>
+            <pre><code data-trim>
                 const user = {
                     firstname: 'john',
                     nickname: 'ninja',
@@ -227,22 +204,20 @@
                     return user.firstname.concat(' ').concat(user.lastname);
                 }
                 console.log(getUserName(user));
-                </code>
-                <code class="javascript fragment" data-trim>
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                     function getUserName({firstname, lastname}) {
                         return firstname.concat(' ').concat(lastname);
                     }
-                </code>
-                <code class="javascript fragment" data-trim>
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                     const getUserName = ({firstname, lastname}) =>
                     firstname.concat(' ').concat(lastname);
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Shorthand Notation</h3>
-            <pre>
-                <code class="javascript" data-trim data-noescape>
+            <pre><code data-trim>
                 const foo = 42;
                 const bar = 1;
 
@@ -250,65 +225,59 @@
                     foo: foo,
                     bar: bar
                     }
-                <span class="fragment">
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 const shorter = {
                     foo,
                     bar
                 }
-                </span>
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>Bonus</h3>
-            <pre>
-                <code class="javascript" data-trim data-noescape>
-
+            <pre><code data-trim>
                 Object.assign({}, {a: 1, c: 3}, {a: 10, b: 2}); // = ?
-
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 const m = new Map();
                 m.set('foo', 2);
                 const bar = m.has('foo') ? m.get('foo') : 0;
-
-                const uniq = new Set([1, 2, 3, 1, 2, 3]);
-                uniq.length // ?
-                </code>
-            </pre>
+            </code></pre>
+            <pre class="fragment"><code data-trim>
+            const uniq = new Set([1, 2, 3, 1, 2, 3]);
+            uniq.length // ?
+            </code></pre>
         </section>
         <section>
             <h3>Rappels - currying</h3>
-            <pre>
-                <code class="javascript" data-trim data-noescape>
+            <pre><code data-trim>
                 let add = function(x) {
                     return function(y) {
                         return x + y
                     }
                 }
                 add(2)(3) // ???
-                <span class="fragment">
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 const add2 = add(2);
                 add2(3); // = ?
-                </span>
-                <span class="fragment">
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 let add = x => y => x + y // WTF ?!
-                </span>
-                <span class="fragment">
+            </code></pre>
+            <pre class="fragment"><code data-trim>
                 let add = x =>
                     y => (x + y);
                 //easy !
-                </span>
-                </code>
-            </pre>
+            </code></pre>
         </section>
         <section>
             <h3>Rappels - this</h3>
-            <pre>
-                <code class="javascript" data-trim data-noescape>
+            <pre><code data-trim data-noescape>
                 function f() {
-                this.foo; // what is this ?
+                    this.foo; // what is this ?
                 }
-                </code>
-            </pre>
+            </code></pre>
         </section>
         <section>
             <h1>
@@ -322,9 +291,7 @@
         </section>
         <section>
             <h3>Hello world</h3>
-            <pre>
-index.js
-                <code class="jsx" data-trim>
+            <pre>index.js<code class="jsx" data-trim>
                 import React from "react";
                 import ReactDOM from "react-dom";
                 import Hello from "./Hello";
@@ -333,9 +300,8 @@ index.js
                     &lt;Hello name="cnrs"/&gt;,
                     document.getElementById('root')
                 );
-                </code>
-hello.js
-                <code class="jsx" data-trim>
+            </code></pre>
+            <pre>hello.js<code data-trim>
                 import React from "react";
 
                 class Hello extends React.Component {
@@ -346,32 +312,77 @@ hello.js
                     }
                 }
                 export default Hello;
-                </code>
-            </pre>
+                </code></pre>
         </section>
         <section>
             <h3>JSX</h3>
-            <pre>
-                <code class="jsx" data-trim>
+            <pre><code data-trim>
                 render: function() {
                     return (
                       <li className="contact">
                           <h2 className="contact-name">{this.props.name}</h2>
                       </li>
                     )
-                }
-                </code>
-                <code class="jsx" data-trim>
+                }</code></pre>
+            <pre><code data-trim>
                 render: function() {
                     return (
                       React.createElement('li', {className: 'contact'},
-                        React.createElement('h2', {className: 'contact-name'},
-                                                            this.props.name)
+                        React.createElement('h2',
+                            {className: 'contact-name'}, this.props.name)
                       )
                     )
                 }
-                </code>
-            </pre>
+                </code></pre>
+        </section>
+        <section>
+            <h3>Create or extends</h3>
+            <pre><code data-trim>
+            const Hello = React.createClass({
+                render: function() {
+                    return (
+                        <h1>Hello {this.props.name}!</h1>
+                    );
+                }
+            });
+            </code></pre>
+            <pre><code data-trim>
+            class Hello extends React.Component {
+                render() {
+                    return (
+                        <h1>Hello {this.props.name}!</h1>
+                    );
+                }
+            }
+            </code></pre>
+        </section>
+        <section data-background="#b5533c">
+            <h3>TP-01</h3>
+            <h4>Hello World</h4>
+            <ol>
+                <li>Etendre la classe React.Component</li>
+                <li>Implémenter la méthode render()</li>
+            </ol>
+        </section>
+        <section>
+            <h3>Type checking</h3>
+            <p style="font-size: 32px">On peut ne <i>rien</i> faire, utiliser <a target="_blank" href="https://www.typescriptlang.org/">Typescript</a> , <a target="_blank" href="https://flow.org/">Flow</a> ou les <a target="_blank" href="https://www.npmjs.com/package/prop-types">PropTypes</a></p>
+            <pre><code data-trim>
+            class Hello extends React.Component {
+                static propTypes = {
+                    name: PropTypes.string.isRequired,
+                    truc: PropTypes.bool
+                };
+                render() {
+                    return <h1>Hello {this.props.name}!</h1>;
+                }
+            }
+
+            Hello.propTypes = {
+                name: PropTypes.string.isRequired,
+                truc: PropTypes.bool
+            }
+            </code></pre>
         </section>
     </div>
 </div>
