make the emptys TPs runnable without error (TP 05-02)

--- a/index.html
+++ b/index.html
@@ -1402,8 +1402,7 @@
                 <li>Installer redux-saga</li>
                 <li>Reprendre le TP-04 mais faisant un appel asynchrone (http) pour charger la liste d'items</li>
                 <li>Faire une saga qui avant d'ajouter l'item au store, applique la TVA sur le prix lors d'un ajout
-                    d'item
-                    par le formulaire
+                    d'item par le formulaire
                 </li>
             </ol>
         </section>
