--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/black.css">
+    <link rel="stylesheet" href="css/theme/white.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -27,6 +27,7 @@
         link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
+
     <style type="text/css">
         p {
             text-align: left;
@@ -56,12 +57,9 @@
                      style="border: none; background: none; box-shadow: none; margin: 0;">React</h1>
             <h3>#ES6</h3>
             <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
-            <p style="text-align: center"><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a>
+            <p style="text-align: center"><a target="_blank" href="mailto:formation@oxiane.com">formation@oxiane.com</a></p>
             </p>
         </section>
-
-        <section><img data-src="images/mynameis.jpg" alt="my name is"></section>
-        <section><img data-src="images/coffee.gif" alt="coffee break"></section>
         <section>
             <h3>Objectifs</h3>
             <img data-src="images/postits.jpg" alt="goals">
@@ -69,7 +67,7 @@
         <section>
             <h3>Versions</h3>
             <pre><code data-trim>
-                    "react": "16.1.1"
+                    "react": "16.2.0"
                     "create-react-app": "1.0.17"
                 </code></pre>
         </section>
@@ -166,32 +164,7 @@
         </section>
         <section>
             <h3>Spread operator</h3>
-            <pre class="fragment current-visible"><code data-trim>
-                const odd = [1, 3, 5, 7, 9];
-                const even = [2, 4, 6, 8]
-                const all = [0];
-
-                // arr.push([element1[, ...[, elementN]]])
-                all.push(odd);
-                all.push(even);
-
-                console.log(all) // ?
-                </code></pre>
-            <pre class="fragment current-visible"><code data-trim>
-                const odd = [1, 3, 5, 7, 9];
-                const even = [2, 4, 6, 8]
-                const all = [0];
-
-                // arr.push([element1[, ...[, elementN]]])
-                for (let i = 0; i < odd.length; i++) {
-                    all.push(odd[i]);
-                }
-                for (let i = 0; i < even.length; i++) {
-                    all.push(even[i]);
-                }
-                console.log(all) // ?
-                </code></pre>
-            <pre class="fragment current-visible"><code data-trim>
+            <pre class="fragment"><code data-trim>
                     const odd = [1, 3, 5, 7, 9];
                     const even = [2, 4, 6, 8]
                     const all = [0];
@@ -201,7 +174,7 @@
                     all.push(...even);
 
                     console.log(all) // ?
-                </code></pre>
+            </code></pre>
         </section>
         <section>
             <h3>Destructuring</h3>
@@ -495,24 +468,14 @@
                 import React from "react";
                 const Hello = (props) => <h1>Hello {props.name}!</h1>;
             </code></pre>
-            <pre class="fragment current-visible"><code data-trim>
-            class ButtonApp extends React.Component {
-                render() {
-                    return &lt;div&gt;
-                        &lt;div&gt;{this.props.title}&lt;/div&gt;
-                        &lt;button&gt;this.props.label}&lt;/button&gt;
-                    &lt;div&gt;
-                }
-            }
-            </code></pre>
-            <pre class="fragment current-visible"><code data-trim>
+            <pre><code data-trim>
             const ButtonApp = (props) =>
                 &lt;div&gt;
                     &lt;div&gt;{props.title}&lt;/div&gt;
                     &lt;button&gt;{props.label}&lt;/button&gt;
                 &lt;div&gt;;
             </code></pre>
-            <pre class="fragment current-visible"><code data-trim>
+            <pre><code data-trim>
             const ButtonApp = ({title, label}) =>
                 &lt;div&gt;
                     &lt;div&gt;{title}&lt;/div&gt;
@@ -1762,9 +1725,7 @@
         </section>
         <section>
             <h3>Let's do it !</h3>
-
-            <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
-            <h3><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a></h3>
+            <h3>help ? <a href="mailto:formation@oxiane.com">formation@oxiane.com</a></h3>
         </section>
     </div>
 </div>
